--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,18 +1,9 @@
 name: GitHub Actions Demo
-run-name: ${{ github.actor }} CI CD 🚀
+run-name: Sample CI CD 🚀
 on: [push]
 jobs:
   build:
-
    runs-on: ubuntu-latest
-
-  steps:
-   - uses: actions/checkout@v3
-   - name: Setup NET
-     uses: actions/setup-dotnet@v3
-     with:
-       dotnet-version: 6.0.x
-   - name: Restore dependencies
-   run: cd DemoApi && dotnet restore
-   - name: build:
-    run: cd DemoApi && dotnet build --no-restore
+  steps: 
+  - name: Checkout
+    uses: actions/checkout@v3
